tests/samples/negative/types/inferred_i32_literal_overflow.ax
module inferred_i32_literal_overflow;

fn main() -> i32 {
  let value = 2147483648;
  return value;
}
